[gd_scene load_steps=4 format=3 uid="uid://cgg8xh2ho75yh"]

[ext_resource type="Script" uid="uid://d0q8md86qvg1e" path="res://Scripts/cast_ui.gd" id="1_i1068"]
[ext_resource type="Script" uid="uid://b1op4eiawmw4b" path="res://Scripts/crystal.gd" id="2_iglr6"]
[ext_resource type="Texture2D" uid="uid://dx21sxgwjrmxn" path="res://Assets/tile_0042.png" id="3_llpem"]

[node name="Cast UI" type="Control" node_paths=PackedStringArray("edit_overlay", "crystals")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_i1068")
edit_overlay = NodePath("Edit Overlay")
crystals = [NodePath("Edit Overlay/Crystal")]

[node name="Edit Overlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crystal" type="Control" parent="Edit Overlay" node_paths=PackedStringArray("selector", "selection_box", "expanded_visuals")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_iglr6")
selector = NodePath("large/small")
selection_box = NodePath("large/Edit Overlay/selector")
radius = 75.0
offset = Vector2(75, 75)
main_crystal = true
expanded_visuals = NodePath("large")

[node name="Button" type="Button" parent="Edit Overlay/Crystal"]
layout_mode = 0
offset_left = 76.0
offset_top = 75.0
offset_right = 84.0
offset_bottom = 83.0
scale = Vector2(5.8800025, 5.8800025)

[node name="large" type="TextureRect" parent="Edit Overlay/Crystal"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_llpem")

[node name="Edit Overlay" type="Control" parent="Edit Overlay/Crystal/large"]
anchors_preset = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 325.0
offset_bottom = 325.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2

[node name="up" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay"]
layout_mode = 0
offset_left = 100.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 116.0
scale = Vector2(1, 0.5276568)
mouse_filter = 2
color = Color(0.25281844, 0.3236525, 1, 1)

[node name="left" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay"]
layout_mode = 0
offset_left = 6.0
offset_top = 108.0
offset_right = 106.0
offset_bottom = 208.0
scale = Vector2(0.845, 0.845)
mouse_filter = 2
color = Color(0.84968233, 0.67115617, 7.70092e-07, 1)

[node name="left" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/left"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 90.0
mouse_filter = 2
color = Color(0.5489626, 0.5489626, 0.54896253, 1)

[node name="right" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay"]
layout_mode = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0.82521325, 0, 0.1429488, 1)

[node name="left" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/right"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
scale = Vector2(0.385, 0.385)
mouse_filter = 2
color = Color(0.5489626, 0.5489626, 0.54896253, 1)

[node name="left2" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/right"]
layout_mode = 0
offset_left = 69.999985
offset_right = 149.99998
offset_bottom = 80.0
scale = Vector2(0.385, 0.385)
mouse_filter = 2
color = Color(0.5489626, 0.5489626, 0.54896253, 1)

[node name="left3" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/right"]
layout_mode = 0
offset_top = 69.999985
offset_right = 80.0
offset_bottom = 149.99998
scale = Vector2(0.385, 0.385)
mouse_filter = 2
color = Color(0.5489626, 0.5489626, 0.54896253, 1)

[node name="left4" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/right"]
layout_mode = 0
offset_left = 69.999985
offset_top = 69.999985
offset_right = 149.99998
offset_bottom = 149.99998
scale = Vector2(0.385, 0.385)
mouse_filter = 2
color = Color(0.5489626, 0.5489626, 0.54896253, 1)

[node name="down" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay"]
layout_mode = 0
offset_left = 150.0
offset_top = 200.0
offset_right = 249.99988
offset_bottom = 300.0
rotation = 0.7853982
scale = Vector2(0.8, 0.8)
mouse_filter = 2
color = Color(0.3091738, 0.5788489, 0, 1)

[node name="selector" type="Control" parent="Edit Overlay/Crystal/large/Edit Overlay"]
anchors_preset = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2

[node name="up2" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/selector"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 6.0
mouse_filter = 2

[node name="up3" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/selector"]
layout_mode = 0
offset_top = 94.0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2

[node name="up4" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/selector"]
layout_mode = 0
offset_left = 6.0
offset_right = 106.0
offset_bottom = 6.0
rotation = 1.5707964
mouse_filter = 2

[node name="up5" type="ColorRect" parent="Edit Overlay/Crystal/large/Edit Overlay/selector"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 6.0
rotation = 1.5707964
mouse_filter = 2

[node name="small" type="TextureRect" parent="Edit Overlay/Crystal/large"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 37.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.525761, 0.525761)
texture = ExtResource("3_llpem")

[node name="Crystal2" type="Control" parent="Edit Overlay" node_paths=PackedStringArray("selector", "selection_box", "expanded_visuals")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.0
offset_top = 39.0
offset_right = -235.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_iglr6")
selector = NodePath("large/small")
selection_box = NodePath("large/Edit Overlay/selector")
radius = 75.0
offset = Vector2(75, 75)
expanded_visuals = NodePath("large")

[node name="Button" type="Button" parent="Edit Overlay/Crystal2"]
layout_mode = 0
offset_left = 76.0
offset_top = 75.0
offset_right = 84.0
offset_bottom = 83.0
scale = Vector2(5.8800025, 5.8800025)

[node name="large" type="TextureRect" parent="Edit Overlay/Crystal2"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_llpem")

[node name="Edit Overlay" type="Control" parent="Edit Overlay/Crystal2/large"]
anchors_preset = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 325.0
offset_bottom = 325.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2

[node name="up" type="ColorRect" parent="Edit Overlay/Crystal2/large/Edit Overlay"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
mouse_filter = 2
color = Color(0.25281844, 0.3236525, 1, 1)

[node name="left" type="ColorRect" parent="Edit Overlay/Crystal2/large/Edit Overlay"]
layout_mode = 0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0.84968233, 0.67115617, 7.70092e-07, 1)

[node name="right" type="ColorRect" parent="Edit Overlay/Crystal2/large/Edit Overlay"]
layout_mode = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0.82521325, 0, 0.1429488, 1)

[node name="down" type="ColorRect" parent="Edit Overlay/Crystal2/large/Edit Overlay"]
layout_mode = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 300.0
mouse_filter = 2
color = Color(0.3091738, 0.5788489, 0, 1)

[node name="selector" type="Control" parent="Edit Overlay/Crystal2/large/Edit Overlay"]
anchors_preset = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2

[node name="up2" type="ColorRect" parent="Edit Overlay/Crystal2/large/Edit Overlay/selector"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 6.0
mouse_filter = 2

[node name="up3" type="ColorRect" parent="Edit Overlay/Crystal2/large/Edit Overlay/selector"]
layout_mode = 0
offset_top = 94.0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2

[node name="up4" type="ColorRect" parent="Edit Overlay/Crystal2/large/Edit Overlay/selector"]
layout_mode = 0
offset_left = 6.0
offset_right = 106.0
offset_bottom = 6.0
rotation = 1.5707964
mouse_filter = 2

[node name="up5" type="ColorRect" parent="Edit Overlay/Crystal2/large/Edit Overlay/selector"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 6.0
rotation = 1.5707964
mouse_filter = 2

[node name="small" type="TextureRect" parent="Edit Overlay/Crystal2/large"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 37.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.525761, 0.525761)
texture = ExtResource("3_llpem")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -77.0
offset_top = -119.0
offset_right = -39.0
offset_bottom = -85.0
mouse_filter = 2

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = -77.0
offset_top = -30.0
offset_right = -39.0
offset_bottom = 4.0
mouse_filter = 2

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = -28.0
offset_top = -77.0
offset_right = 10.0
offset_bottom = -43.0
mouse_filter = 2

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = -123.0
offset_top = -76.0
offset_right = -85.0
offset_bottom = -42.0
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="crystal_charge_signal" from="Edit Overlay/Crystal" to="." method="_spell_crystal_charge"]
[connection signal="crystal_finish_spell" from="Edit Overlay/Crystal" to="." method="_finilize_spell"]
[connection signal="button_down" from="Edit Overlay/Crystal/Button" to="Edit Overlay/Crystal" method="activate"]
[connection signal="crystal_charge_signal" from="Edit Overlay/Crystal2" to="." method="_imbuement_crystal_charge"]
[connection signal="button_down" from="Edit Overlay/Crystal2/Button" to="Edit Overlay/Crystal2" method="activate"]
